--- a/public/css/app.css
+++ b/public/css/app.css
@@ -424,3 +424,39 @@ table.dataTable {
 .badge {
  --bs-badge-padding-x: 0;
 }
+
+/* Make Select2 full width like Bootstrap */
+/* Make Select2 full width */
+.select2-container {
+    width: 100% !important;
+}
+
+/* Match Bootstrap floating input height */
+.select2-container--default .select2-selection--single {
+    height: 58px !important;
+    padding: 1.25rem 0.75rem !important;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ced4da;
+    border-radius: 0.375rem;
+}
+
+/* Fix text alignment */
+.select2-selection__rendered {
+    line-height: 1.25 !important;
+    padding-left: 0 !important;
+}
+
+/* Fix arrow alignment */
+.select2-selection__arrow {
+    height: 100% !important;
+    top: 0 !important;
+}
+
+.select2-selection__placeholder{
+    display: none;
+}
+.select2-selection__rendered
+{
+    padding-top: 10px;
+}
